the real submission final answer

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,11 @@
     <nav>
         <ol>
             <li id="nameHeader">Jeffrey Lee</li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
                 <div class="verticalLine"></div>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
                 <div class="verticalLine"></div>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">About</a></li>
         </ol>
     </nav>
     <div id="portfolioBox">
